user-professor input error and alignment fix

--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -69,7 +69,6 @@
 .selectUserAlignment {
   text-align: center;
   width: 224px;
-  margin-right: 16px;
   margin: 0 auto;
 }
 
